@@ -2,10 +2,11 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '4.0.6'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group = 'ru.svsand'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 description = 'yson-converter'
 
 java {
@@ -29,6 +30,12 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
+javafx {
+    version = "21"
+    modules = ['javafx.controls']
+}
+
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs '-XX:+EnableDynamicAgentLoading', '-Xshare:off'
 }
